=========================================================================
CHANGE LOG
=========================================================================

2009-05-18 Warren L. DeLano <warren@delsci.com>	

	* pseudoatom labeling via main menu right-click
	
2009-05-13 Warren L. DeLano <warren@delsci.com>	

	* fixed bug with names containing 'model' in selection macros
	
2009-05-11 Warren L. DeLano <warren@delsci.com>	

	* experimental movie_panel setting

	* changed internal_gui_mode=0 appearance again
	
2009-05-03 Warren L. DeLano <warren@delsci.com>	

	* fixed internal_gui_mode, 1 and 2; added 2 rows to viewer window
	
	* fixed bond color problem from maestro
	
	* fixed 'ace' builder bug

2009-04-28 Warren L. DeLano <warren@delsci.com>	

	* fixed ramp bug for transformed maps

2009-04-26 Warren L. DeLano <warren@delsci.com>	
	
	* fixed bug with clicking on the sphere representation
	
2009-04-10 Warren L. DeLano <warren@delsci.com>	

	* changed 'import pymol' behavior to defer launch until
          finish_launching is actually called
	
	* added warnings for pml/py/pym run/@ confusion

2009-04-09 Warren L. DeLano <warren@delsci.com>	

	* added bycell selection operator
	
2009-03-26 Warren L. DeLano <warren@delsci.com>	

	* acnt map support
	
	* fixed bug with selection argument to cmd.get_names
	
2009-03-23 Warren L. DeLano <warren@delsci.com>	

	* fixed problem unintentionally quashing "+" from filenames
	
	* fixed selector bug parsing one+object as two + object

	* added " + " selection operator to mitigate impact of bug
	  and added " - " operator to provide complement to " + "
	
2009-03-21 Warren L. DeLano <warren@delsci.com>	

	* added simple fasta output
	
	* fixed major bug with 'domain' argument to select
		
	* greatly improved the performance of the peptide builder

	* fab command
	
2009-03-20 Warren L. DeLano <warren@delsci.com>	

	* very rough FASTA & ALN read support (full peptide builds)
	
2009-03-14 Warren L. DeLano <warren@delsci.com>	
